# financebuddy

./: .gitignore  Makefile  README.md  pyproject.toml
financebuddy/: cli.py  currencyutils.py  exceptions.py
financebuddy/export/: api.py  factory.py  models.py
financebuddy/export/integrations/: base.py  financebuddy_csv.py  financebuddy_json.py
financebuddy/parser/: api.py  factory.py  helpers.py
financebuddy/parser/integrations/: base.py  csv.py  dataframe.py  excel.py
financebuddy/parserconfig/: api.py  factory.py  models.py
financebuddy/parserconfig/integrations/: csv.py  dataframe.py  excel.py
financebuddy/report/: api.py  models.py
tests/data/configs/: invalid_extension.json  parser_foo_csv_config.json
tests/integration/test_cli/: test_error.py  test_missing.py  test_parse.py  test_version.py
tests/unit/: conftest.py  test_currencyutils.py  test_exceptions.py
tests/unit/test_export/: test_factory.py
tests/unit/test_export/test_integrations/: conftest.py  test_base.py
tests/unit/test_parser/: conftest.py  test_factory.py  test_helpers.py
tests/unit/test_parser/test_integrations/: test_base.py  test_dataframe.py
tests/unit/test_parserconfig/: test_api.py  test_factory.py  test_models.py
tests/unit/test_parserconfig/test_integrations/: test_csv.py
